# RMUA2022

./: LICENSE  README.md
robot_decision/: CMakeLists.txt  README.md  behavior_tree.h  blackboard.hpp  callback.hpp  decision_node.cpp  decision_node.hpp  map.pgm  package.xml
robot_decision/behaviors/: add_blood.hpp  add_bullet.hpp  attack_enemy.hpp  game_start.hpp  global_map.hpp  leave_buff.hpp  patrol.hpp  retreat.hpp  sentry.hpp  support_teammate.hpp
robot_decision/executor/: buff_executor.hpp  chassis_executor.hpp  log_executor.hpp  map_executor.hpp  self_info_executor.hpp
robot_decision/launch/: robot_decision.launch
robot_detection/: CMakeLists.txt  README.md  detection_node.cpp  detection_node.h  package.xml
robot_detection/armor_detect/: armor_detection.cpp  armor_detection.h
robot_detection/camera_param/: camera_param_icra1.yaml  camera_param_icra2.yaml  camera_param_rmua1.yaml  camera_param_rmua2.yaml
robot_detection/gimbal_control/: gimbal_control.cpp  gimbal_control.h
robot_detection/kalman_filter/: CMakeLists.txt  kalman_filter.cpp  kalman_filter.h
robot_detection/launch/: robot_detection.launch  robot_detection_test.launch
robot_msgs/: CMakeLists.txt
robot_msgs/msg/: TOFdata.msg
robot_msgs/msg/referee/: GameBuff.msg  RobotStatus.msg
robot_msgs/msg/robot/: ArmorDetection.msg  ChassisParam.msg  GimbalAngle.msg  GlobalMap.msg  RobotLocation.msg  RobotPose.msg  TwistAccel.msg
robot_msgs/msg/wireless/: SentryData.msg  SharePath.msg  TeamInfo.msg
robot_omni/: CMakeLists.txt  README.md  package.xml
robot_omni/config/: robot_detector.yaml
robot_omni/include/robot_detector/: RobotDetector.h
robot_omni/launch/: robot_detector_node.launch
robot_omni/src/: CMakeLists.txt  robot_detector_node.cpp
robot_omni/src/robot_detector/: CMakeLists.txt  RobotDetector.cpp
robot_sentry/: README.md
robot_sentry/pytorch/: anchors6.txt  genanchors.py  pytorch2onnx.py  test.py  train.py
robot_sentry/pytorch/data/: sentry.data  sentry.names
robot_sentry/pytorch/model/: detector.py  fpn.py
robot_sentry/pytorch/model/backbone/: shufflenetv2.py
robot_sentry/pytorch/utils/: datasets.py  loss.py  utils.py
robot_sentry/pytorch/weights/: sentry-0-epoch-model.pth  sentry-10-epoch-model.pth
robot_sentry/src/: README.md
robot_sentry/src/robot_bringup/: CMakeLists.txt  demo.launch  homograpy.launch  package.xml
robot_sentry/src/robot_msgs/: CMakeLists.txt  package.xml
robot_sentry/src/robot_msgs/msg/: IMUParam.msg
robot_sentry/src/robot_msgs/msg/net/: ZMQdata.msg
robot_sentry/src/robot_msgs/msg/referee/: GameRobotHP.msg  GameZone.msg  RobotDamage.msg
robot_sentry/src/robot_msgs/msg/robot/: ArmorDetection.msg  CornerDetection.msg  GimbalAngle.msg  OdomGoalMsg.msg  RobotFlag.msg
robot_sentry/src/robot_msgs/msg/wireless/: SentryData.msg  TeamInfo.msg  WirelessParam.msg
robot_sentry/src/sentry_beta/: CMakeLists.txt  package.xml  sentry_node.cpp
robot_sentry/src/sentry_beta/model/: 0521fixmosaic_sim.onnx
robot_sentry/src/sentry_beta/sort/: Hungarian.cpp  Hungarian.h  pv_kalman_filter.cpp  pv_kalman_filter.h  rsort.cpp  rsort.h  trrt_detector.cpp  trrt_detector.h  visualize.cpp  visualize.h
robot_sentry/src/sentry_beta/tensorrt/onnx/: onnx-ml.pb.h  onnx-operators-ml.pb.h
robot_sentry/src/tools/: CMakeLists.txt  homography.cpp  package.xml
robot_sentry/src/tools/homo_mat/: master_H.yaml  slave_H.yaml
